# QtTinySA

./: README.md  pyproject.toml
src/QtTinySA/: main.py
